resources/Cluster-IP service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-clusterip-service
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # The port on the pods the service will direct traffic to


apiVersion: v1
kind: Service
metadata:
  name: cluster-IP-service
  labels:
    app:nginx
spec:
  selector:
    app:nginx
  ports:
    - protocol: TCP
      port: 80
      targetport: 8080
