resources/Nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80 # Port exposed on the service
      targetPort: 8080 # Port on the pods the service will direct traffic to
      nodePort: 30000 # Specify the node port (optional, or Kubernetes assigns a random port from 30000-32767)
  type: NodePort # Define the service type as NodePort
